fix ensure visible behavior (#6733)
* refine ensure cursor visible behavior

* fix for IE11 tab style

* guard against attempts to render with no cursor available

* force check for pending scroll after failed scroll attempt

* defend against repeated calls to scroll into view

--- a/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
+++ b/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
@@ -2591,12 +2591,12 @@ body.rstudio-themes-flat .rstudio-themes-dark-grey {
 
 .rstudio-themes-flat .rstudio-themes-dark-grey .gwt-TabLayoutPanelTabs table.rstheme_tabLayoutCenter,
 .rstudio-themes-flat .rstudio-themes-dark-grey .rstheme_minimizedWindowObject table.rstheme_tabLayoutCenter {
-   background: THEME_DARKGREY_INACTIVE;
+   background: THEME_DARKGREY_INACTIVE !important;
 }
 
 .rstudio-themes-flat .rstudio-themes-dark-grey .gwt-TabLayoutPanelTabs,
 .rstudio-themes-flat .rstudio-themes-dark-grey .rstheme_minimizedWindowObject .rstheme_center {
-   background: THEME_DARKGREY_MOST_INACTIVE;
+   background: THEME_DARKGREY_MOST_INACTIVE !important;
 }
 
 @if user.agent safari {
